tests/semantic/agg_checks2/agg_checks2.err
Error: Undefined type in attribute obj:HeapAllocationRef in file agg_checks2.dl at line 1
.decl ObjectTotalFieldPointsToCount(obj:HeapAllocationRef,size:number)
----------------------------------------^------------------------------
Error: Undefined relation ExpandedInstanceFieldPointsTo in file agg_checks2.dl at line 4
           ExpandedInstanceFieldPointsTo(_,_,_,_,obj),
-----------^-------------------------------------------
Error: Undefined relation InstanceFieldPointsTo in file agg_checks2.dl at line 5
              size = count :{InstanceFieldPointsTo(_,_,_,_,obj)}.
-----------------------------^------------------------------------
3 errors generated, evaluation aborted
