tests/semantic/agg_checks2/agg_checks2.dl
.decl ObjectTotalFieldPointsToCount(obj:HeapAllocationRef,size:number)

    ObjectTotalFieldPointsToCount(obj,size) :-
           ExpandedInstanceFieldPointsTo(_,_,_,_,obj),
              size = count :{InstanceFieldPointsTo(_,_,_,_,obj)}.
